[package]
name = "rsvp-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
eframe = { version = "0.33.3", default-features = false, features = ["accesskit", "default_fonts", "glow"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
lopdf = "0.42"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
